get cash entries
